👋🖇 Checkpoint ./public/js/streamer.js:37906304/322774 ./public/js/liveRoom.js:37906304/1020 ./views/liveRoom.ejs:37906304/37 ./views/streamer.ejs:37906304/642

--- a/views/streamer.ejs
+++ b/views/streamer.ejs
@@ -158,6 +158,8 @@
             </div>
         </div>
     </div>
+              
+    <video id="pipChatVideoPlayer" style="display: none;" muted playsinline></video>
 
     <!-- Hidden Canvas for PiP -->
     <!-- <canvas id="pipChatCanvasV2" width="400" height="600" style="position: fixed; left: -9999px; top: -9999px;"></canvas> -->
