--- a/views/streamer.ejs
+++ b/views/streamer.ejs
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.css">
     <script src="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js" defer></script>
-      <!-- Ví dụ với CDN (kiểm tra phiên bản mới nhất) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/rasterizehtml/1.3.1/rasterizeHTML.all.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- Ví dụ với CDN (kiểm tra phiên bản mới nhất) -->
+    <script src="/js/libs/rasterizeHTML.all.js"></script>
 </head>
 <body class="streamer-body"> <%# Add body class %>
     <input type="hidden" id="streamerUsername" value="<%= user.username %>"> <%# Changed ID %>
