💳🖼 Checkpoint ./package.json:37906304/264 ./server.js:37906304/7964 ./public/js/streamer.js:37906304/352 ./views/streamer.ejs:37906304/14

--- a/views/streamer.ejs
+++ b/views/streamer.ejs
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js" defer></script>
     <!-- Ví dụ với CDN (kiểm tra phiên bản mới nhất) -->
-    <script src="/js/libs/rasterizeHTML.all.js"></script>
+    <script src="/js/libs/rasterizeHTML.all.js" allow-scripts></script>
 </head>
 <body class="streamer-body"> <%# Add body class %>
     <input type="hidden" id="streamerUsername" value="<%= user.username %>"> <%# Changed ID %>
