--- a/views/streamer.ejs
+++ b/views/streamer.ejs
@@ -161,8 +161,14 @@
         </div>
     </div>
               
-    <video id="pipChatVideoPlayer" style="display: none;" muted playsinline></video>
-      
+    <video 
+      id="pipChatVideoPlayer" 
+      autoplay 
+      muted 
+      playsinline 
+      style="display: none;"
+    ></video>
+ 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="/socket.io/socket.io.js"></script> <%# Socket.IO client %>
