--- a/views/streamer.ejs
+++ b/views/streamer.ejs
@@ -167,6 +167,9 @@
     </div> <!-- End .streamer-main-layout -->
               
     <div id="whiteboardContainerOverlayV2" class="whiteboard-container-overlay" style="display: none; opacity: 0;">
+        <div id="streamerCoordsDisplay" style="position: absolute; top: 5px; left: 5px; background-color: rgba(0,0,0,0.5); color: white; padding: 3px 7px; border-radius: 3px; font-size: 0.75em; z-index: 10; display: none; pointer-events: none;">
+            <!-- Coordinates will be inserted here by JS -->
+        </div>
         <div id="whiteboardToolbarV2" class="whiteboard-toolbar">
             <span style="font-weight: bold; color: var(--text-light); margin-right:15px;">Bảng Vẽ</span>
             <label for="wbColorPickerV2" class="wb-label">Màu:</label>
